# repos

./: .gitattributes  .gitignore  .pylintrc  Cargo.toml  Pipfile  README.md  mkDummyRepos.sh  mkTestRepos.sh  pytest.ini  repos
.cargo/: config.toml
.github/workflows/: workflow.yml
repos/: Cargo.toml
repos/src/: main.rs
rnd/: unpacking_chained_enums.rs
src/: config.rs  funcs.rs  main.rs  repo.rs  repos.rs  repostatus.rs  tui.rs  utils.rs
