[package]
name = "repos"
# version = "v07.09.2021"
# version = "v21.10.2021"
version = "0.0.0"

edition = "2021"

[dependencies]
structopt = "0.3.25"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true

# Run strip on the binary!
# $ string ./target/release/...
